# metaseq

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  celeryconfig.py  demopage.html  interactive_gen.py  ll.py  mypy.ini  package-lock.json  pyproject.toml  query_opt.py  requirements.txt  setup.py  utils.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  postCreateCommand.sh
.github/: PULL_REQUEST_TEMPLATE.md
cpu_tests/: test_cm3_dataset.py  test_data_utils.py  test_dataclass.py  test_dictionary.py  test_file_chunker_utils.py  test_jsonl_dataset.py  test_metrics.py  test_multihead_attention.py  test_partitioned_streaming_dataset.py  test_sequence_scorer.py  test_streaming_iterators.py  test_streaming_language_modeling_task.py  test_streaming_shuffle_dataset.py  test_streaming_token_block_dataset.py  test_token_block_dataset.py  test_utils.py
docs/: CONTRIBUTING.md  Makefile  api.md  faster-transformer.md  history.md  setup.md  training.md
few_shot_125M_gptz_reshard_results/: t.cb_tmp.cb_eval.val.en_fs0_results.json
gpu_tests/: test_activation_checkpointing.py  test_checkpoint_loading_on_more_gpus.py  test_checkpoint_saving.py  test_checkpoint_saving_async.py  test_checkpoint_saving_local.py  test_cli_train.py  test_fp16_optimizer.py  test_generator_hub_interface.py  test_generator_interface.py  test_hf_compatibility.py  test_hub_utils.py  test_model_parallel_mp1.py  test_model_parallel_mp1_mp2.py  test_model_parallel_mp2.py  test_sequence_parallel.py  test_sequence_parallel_transformer_layer.py  test_training_integrity.py  utils.py
metaseq/: __init__.py  file_io.py  (+18 more)
(+386 files in other folders)
